# Garfield

./: CMakeLists.txt  README.md  cmake-format.py
CMake/: BuildUtils.cmake  CMakeLists.txt  GarfieldConfig.cmake.in  __init__.py.in  setup.csh.in  setup.sh.in
Data/: IonMobility_Ar+_Ar.txt  IonMobility_C8Hn+_iC4H10.txt  IonMobility_CF4+_CF4.txt  IonMobility_SF6-_SF6.txt  IonMobility_Xe+_P12_Xe.txt  IonMobility_Xe+_P32_Xe.txt  emerc.tab  heps.tab  macom.tab
Data/Deexcitation/: OscillatorStrengths_Ar.txt  RateConstants_Ar_Ar.txt  RateConstants_Ar_C2H2.txt  RateConstants_Ar_C2H6.txt  RateConstants_Ar_CF4.txt  RateConstants_Ar_CH4.txt  RateConstants_Ar_CO2.txt  RateConstants_Ar_iC4H10.txt  TransitionRates_Ar.txt
Degrade/: CMakeLists.txt
Doc/: CMakeLists.txt  Doxyfile.in
Doc/UserGuide/: Appendix.tex  Components.tex  Examples.tex  Installation.tex  Introduction.tex  Layout.tex  (+8 more)
Examples/: CMakeLists.txt
Examples/AliceTPC/: CMakeLists.txt  full_tpc_sim.C  ion_signal.C  plot_gas.C
Examples/AnalyticField/: CMakeLists.txt  README.md  ar_50_c2h6_50_B_angle.gas  capacitance.py  charges.C  dipole.C  fieldlines.C  fieldlines.py  gallery.C  integrate.C  isochrons.C  mwpc.C  optimise.C  pixels.C  plotForces.C  polar.C  sag.C  strip.C  wedge.C
Examples/Ansys121/: CMakeLists.txt  strip.C
Examples/Ansys121/fieldmaps/strip/: ELIST.lis  MPLIST.lis  NLIST.lis  PRNSOL.lis  strip
Examples/Ansys123/: CMakeLists.txt  mm.C  strips.C  triplegem.C
Examples/Ansys123/fieldmaps/micromegas/: ELIST.lis  MPLIST.lis  NLIST.lis  PRNSOL.lis  micromegas
Examples/Ansys123/fieldmaps/strips/: ELIST.lis  NLIST.lis  field.lis  strips  weight1.lis  weight2.lis  weight3.lis
Examples/Ansys123/fieldmaps/triplegem/: ELIST.lis  NLIST.lis  field.lis  triplegem  weight1.lis
Examples/Asacusa/: CMakeLists.txt  example.cpp
Examples/Bichsel/: CMakeLists.txt  test.C
Examples/CST/: CMakeLists.txt  cst.C
Examples/Comsol/: CMakeLists.txt  field.txt  gem.C  mesh.mphtxt
Examples/Comsol/Comsol/: GEM_Comsol_Garfield.m  GEM_Comsol_Garfield.mph
Examples/Degrade/: CMakeLists.txt  mip.C  plotdedx.C
Examples/DelayedSignal/: CMakeLists.txt  analytic.C
Examples/DriftTube/: CMakeLists.txt  ar_93_co2_7_3bar.gas  fast_ion_signal.C  mdt.C  mdt.py  mdt_gamma.C  mdt_mt.C
Examples/Electroluminescence/: CMakeLists.txt  example.C  userHandle.C
Examples/Elmer/: README.md
Examples/Elmer/lem/: CMakeLists.txt  avalanche.cc  gemcell.geo  gemcell.sif  gemcell_WTlel.sif  lem
Examples/Elmer/parallel_plate/: CMakeLists.txt  gf_rectangle.geo  parallel_plate.geo  parallel_plate.sif  pp.cc
Examples/Elmer/wire2d/: CMakeLists.txt  wire2d.cc  wire2d.geo  wire2d.sif
Examples/Elmer/wire2d/wire2d/: mesh.boundary  mesh.header
Examples/GainFluctuations/: CMakeLists.txt  arco2.C  distance.C
Examples/GasFile/: CMakeLists.txt  ar_80_co2_20_0T.gas  ar_80_co2_20_2T.gas  ar_93_co2_7.gas  generate.C  merge.C  microscopic.py  penning.C  printTable.C  printTable.py  read.C  read.py
Examples/Geant4GarfieldInterface/: CMakeLists.txt  README.md  exampleGarfield.cc  physics.mac
Examples/Geant4GarfieldInterface/include/: GarfieldAnalysis.hh  GarfieldDetectorConstruction.hh  GarfieldEventAction.hh  GarfieldG4FastSimulationModel.hh  GarfieldMessenger.hh  GarfieldPhysics.hh  GarfieldPhysicsList.hh  GarfieldPrimaryGeneratorAction.hh  GarfieldRunAction.hh  GarfieldSteppingAction.hh
Examples/Geant4GarfieldInterface/src/: GarfieldDetectorConstruction.cc  GarfieldEventAction.cc  GarfieldG4FastSimulationModel.cc  GarfieldMessenger.cc  GarfieldPhysics.cc  GarfieldPhysicsList.cc  GarfieldPrimaryGeneratorAction.cc  GarfieldRunAction.cc  GarfieldSteppingAction.cc
Examples/Gem/: gem.C  gem.py
Examples/GemMovie/: CMakeLists.txt  gem_movie.C
Examples/GemMovie/fieldmap/: ELIST.lis  MPLIST.lis  NLIST.lis  PRNSOL.lis  std_1000_3000_550
Examples/Grid/: CMakeLists.txt  Efield.txt  bfield.C  plotfield.C  savefield.C  solenoid.txt
Examples/Heed/: CMakeLists.txt  dedx.py  edep.C  edep.py  fe55.C  heed_bfield.C  plotdedx.C  qdepSi.C  rangeSi.C
Examples/Paschen/: CMakeLists.txt  gastable.C  paschenariso.C
Examples/RPC/: CMakeLists.txt  TimingRPCGas.gas  Weight.C  c2h2f4_ic4h10_sf6.gas
Examples/Signals/: CMakeLists.txt  ft.txt  noise.C
Examples/Silicon/: CMakeLists.txt  planar.C  planar.py  planar_movie.C
Examples/Srim/: Alpha_in_Ar.txt  CMakeLists.txt  checkhwf.C  srim.C  srimbfield.C  trim.C  trimsignal.C
Examples/Tcad/: CMakeLists.txt  pixel.C  pixel.py  pixel_des.grd  pixel_mt.C
Examples/Tcad/Diode3d/: CMakeLists.txt  diode.cpp  diode_msh.grd
Examples/TcadDelayed/: CMakeLists.txt  README.md  diode.C
Examples/TcadDelayed/sentaurus/: garfield_convert_tcl.cmd  garfield_convert_tcl.prf  plot_times.txt  sde_dvs.cmd  sde_dvs.prf  weighting_vector_des.cmd  weighting_vector_des.prf
Examples/Trapping/: CMakeLists.txt  Simulation.cpp
Examples/Trapping/TcadExport/: Attachment_vis.tcl  Efield_vis.tcl  Wfield_vis.tcl  sdevice.par  sdevice_des.cmd
Examples/Voxel/: CMakeLists.txt  plotfield.C  savefield.C
Examples/neBEM/: BiconicalGemByneBEM.C  CMakeLists.txt  MWPCbyneBEM.C  RPCbyneBEM.C  crossingWires.C  parallelPlates.C  parallelPlatesWeightingField.C
Examples/neBEM/2D/: CMakeLists.txt  README.md  dielectric.C  triangle.C  wire.C
Magboltz/: CMakeLists.txt
NeBem/: ComputeProperties.c  ReTriM.c  neBEM.c  neBEMInterface.c
Source/: AvalancheGrid.cc  AvalancheMC.cc  AvalancheMicroscopic.cc  Component.cc  ComponentAnalyticField.cc  ComponentAnsys121.cc  ComponentAnsys123.cc  ComponentCST.cc  ComponentComsol.cc  ComponentElmer.cc  ComponentElmer2d.cc  ComponentFieldMap.cc  ComponentNeBem3d.cc  ComponentParallelPlate.cc  ComponentTcad2d.cc  ComponentTcad3d.cc  ComponentTcadBase.cc  ComponentUser.cc  DriftLineRKF.cc  Medium.cc  MediumCdTe.cc  MediumDiamond.cc  MediumGaAs.cc  MediumGaN.cc  MediumGas.cc  MediumMagboltz.cc  MediumSilicon.cc  NeBemInterface.cpp  Numerics.cc  QuadTree.cc  RandomEngineRoot.cc  Sensor.cc  SolidSphere.cc  SolidTube.cc  TGeoTet.cc  TetrahedralTree.cc  Track.cc  TrackBichsel.cc  TrackDegrade.cc  TrackElectron.cc  (+13 more)
(+60 files in other folders)
